Prj-1/main.tf
provider "aws" {
  region     = "us-east-1"
  access_key = "AKIAR654BCE52W4ROIH5"
  secret_key = "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"
}

# 1. Create VPC
resource "aws_vpc" "prod-vpc" {
  cidr_block = "10.0.0.0/16"
  tags = {
      Name = "production"
  }
}

# 2. Create Internet Gateway
resource "aws_internet_gateway" "gw" {
  vpc_id = aws_vpc.prod-vpc.id

  tags = {
        Name = "vpc-gateway"
  }
}

# 3. Create Custom Route Table
resource "aws_route_table" "prod-route-table" {
  vpc_id = aws_vpc.prod-vpc.id

  route = [
    {
      cidr_block = "0.0.0.0/0"
      gateway_id = aws_internet_gateway.gw.id
    },
    {
      ipv6_cidr_block        = "::/0"
      egress_only_gateway_id = aws_internet_gateway.gw.id
    }
  ]

  tags = {
    Name = "prod"
  }
}

# 4. Create a Subnet
resource "aws_subnet" "prod-subnet" {
  vpc_id     = aws_vpc.prod-vpc.id
  cidr_block = "10.0.1.0/24"
  availability_zone = "us-east-1a"
  tags = {
    Name = "Prod-subnet"
  }
}

# 5. Associate a Subnet with Route Table
resource "aws_route_table_association" "a" {
  subnet_id      = aws_subnet.prod-subnet.id
  route_table_id = aws_route_table.prod-route-table.id
}

# 6. Create Security Group to allow prt 22, 80, 443
resource "aws_security_group" "allow_web" {
  name        = "allow_web_traffic"
  description = "Allow web traffic"
  vpc_id      = aws_vpc.prod-vpc.id

  ingress {
      description      = "HTTPS"
      from_port        = 443
      to_port          = 443
      protocol         = "tcp"
      cidr_blocks      = ["0.0.0.0/0"]
      #ipv6_cidr_blocks = [aws_vpc.main.ipv6_cidr_block]
    }
  
  ingress {
      description      = "HTTP"
      from_port        = 80
      to_port          = 80
      protocol         = "tcp"
      cidr_blocks      = ["0.0.0.0/0"]
      #ipv6_cidr_blocks = [aws_vpc.main.ipv6_cidr_block]
    }
  
  ingress  {
      description      = "SSH"
      from_port        = 2
      to_port          = 2
      protocol         = "tcp"
      cidr_blocks      = ["0.0.0.0/0"]
      #ipv6_cidr_blocks = [aws_vpc.main.ipv6_cidr_block]
    }
  

  egress {
      from_port        = 0
      to_port          = 0
      protocol         = "-1"
      cidr_blocks      = ["0.0.0.0/0"]
      ipv6_cidr_blocks = ["::/0"]
    }


  tags = {
    Name = "allow-web"
  }
}

# 7. Create a Network Interface with an IP in the sbnet that was created in $4
resource "aws_network_interface" "web-server-ni" {
  subnet_id       = aws_subnet.prod-subnet.id
  private_ips     = ["10.0.1.50"]
  security_groups = [aws_security_group.allow_web.id]

}

# 8. Assign an Elastic IP to the Netwrk Interface created in $7
resource "aws_eip" "one" {
  vpc                       = true
  network_interface         = aws_network_interface.web-server-ni.id
  associate_with_private_ip = "10.0.1.50"
  depends_on = [aws_internet_gateway.gw]
}

# 9. Create an Ubunatu Server and install/enable apache2
resource "aws_instance" "web-server-instance" {
  ami = "ami-01cc34ab2709337aa"
  instance_type = "t2.micro"
  availability_zone = "us-east-1a"
  key_name = "prod-key"

  network_interface {
    device_index = 0
    network_interface_id = aws_network_interface.web-server-ni.id
  }
}






#resource "<provider>_<resource_type>" "name" {
#    config options..
#    key = value
#    key2 = value2
#}
